[project]
name = "verieql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mo-sql-parsing==8.205.22260",
    "ujson>=5.10.0",
    "ordered-set>=4.1.0",
    "lark>=1.2.2",
    "tqdm>=4.66.5",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "prettytable>=3.11.0",
    "mysql-connector-python>=9.0.0",
    "matplotlib>=3.9.2",
    "sphinx>=8.0.2",
    "sphinx-rtd-theme>=0.5.1",
    "setuptools>=75.1.0",
]
